--- a/page5.html
+++ b/page5.html
@@ -1,84 +1,130 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="en">
-   <head>
-      <title>Usability Testing</title>
-      <link rel="stylesheet" href="./ut.css">
-      <meta name="title" content="Usability Testing"/>
-      <meta name="Keywords" content=""/>
-      <meta name="Description" content=""/>
-   </head>
-   <body>
-      <!-- Site navigation menu -->
-      <ul class="navbar">
-      </ul>
-      <!-- Main content 
-         https://www.jotform.com/blog/how-to-add-captcha-to-google-forms/
-         -->
-      <div class="box">
-         Kuppusamy, K.S., Aghila, G. HuMan: an accessible, polymorphic and personalized CAPTCHA interface with preemption feature tailored for persons with visual impairments. Univ Access Inf Soc 17, 841–864 (2018). https://doi.org/10.1007/s10209-017-0567-3
-      </div>
-      <table>
-         <tr>
-            <td>
-               <button class="td11-button">
-               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td11img" alt="some image"> </button>
-			   
-            </td>
-            <td>
-               <button class="td12-button">
-               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td12" alt="some image"> </button>
-            </td>
-            <td>
-               <button class="td13-button">
-               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td13" alt="some image"></button>
-            </td>
-         </tr>
-         <tr>
-            <td>
-               <button class="td21-button">
-               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td21" alt="some image"></button>
-            </td>
-            <td>
-               <button class="td22-button">
-               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td22" alt="some image"></button>
-            </td>
-            <td>
-               <button class="td23-button">
-               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td23" alt="some image"></button>
-            </td>
-         <tr>
-            <td align ="left"> 
-               <button class="play-button"> Button Play Sound</button>
-            </td>
-            </td>
-            <td align ="left"> 
-               <button class="submit-button"> Button Submit</button>
-            </td>
-            <td>
-            </td>
-         </tr>
-      </table>
-      <!-- &hellip; gives you ... -->
-      <address>
-         <table cellpadding="10" align="center">
-            <tr>
-               <td>
-               </td>
-               <td>
-                  <h4>
-                     <SCRIPT LANGUAGE="JavaScript">
-                        <!-- This script and many more are available free online at -->
-                        <!-- The JavaScript Source!! http://javascript.internet.com -->
-                        document.write("Updated: " + document.lastModified)
-                     </SCRIPT>
-                  </h4>
-				  <a href="#"> <button class="export-csv"> Export CSV</button> </a>
-               </td>
-               <td>
-               </td>
-            </tr>
-         </table>
-      </address>
-      <script src="./page5script.js"></script>
-   </body>
+<head>
+  <title>Usability Testing</title>  
+  <link rel="stylesheet" href="./ut.css">
+  <meta name="title" content="Usability Testing"/>
+  <meta name="Keywords" content=""/>
+  <meta name="Description" content=""/>
+  
+</head>
+
+
+<body>
+
+<!-- Site navigation menu -->
+<ul class="navbar">
+  <li><a href="index.html">Home</a></li>
+</ul>
+
+
+
+
+
+<!-- Main content 
+https://www.jotform.com/blog/how-to-add-captcha-to-google-forms/
+-->
+<div class="box">
+
+Jonathan Holman, Jonathan Lazar, Jinjuan Heidi Feng, and John D'Arcy. 2007. Developing usable CAPTCHAs for blind users. In Proceedings of the 9th international ACM SIGACCESS conference on Computers and accessibility (Assets '07). Association for Computing Machinery, New York, NY, USA, 245–246. DOI:https://doi.org/10.1145/1296843.1296894
+
+
+<br><br>
+
+Jonathan Lazar, Jinjuan Feng, Tim Brooks, Genna Melamed, Brian Wentz, Jon Holman, Abiodun Olalere, and Nnanna Ekedebe. 2012. The SoundsRight CAPTCHA: an improved approach to audio human interaction proofs for blind users. In Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI '12). Association for Computing Machinery, New York, NY, USA, 2267–2276. DOI:https://doi.org/10.1145/2207676.2208385
+
+<br><br>
+
+Graig Sauer and Harry Hochheiser and Jinjuan Feng and Jonathan Lazar, (2008) Towards a universally usable captcha}, In Proc. of the 4th Symp. On Usable Privacy and Security (SOUPS ’08).
+
+<br><br>
+
+Graig Sauer, Jonathan Lazar, Harry Hochheiser, and Jinjuan Feng. 2010. Towards A Universally Usable Human Interaction Proof: Evaluation of Task Completion Strategies. ACM Trans. Access. Comput. 2, 4, Article 15 (June 2010), 32 pages. DOI:https://doi.org/10.1145/1786774.1786776
+
+  
+</div>
+
+<!--Images: GitHub\usabilitytesting\media\captcha-images\public-domain-www.publicdomainpictures.net\
+Sounds: GitHub\usabilitytesting\media\captcha-sounds\
+
+
+Figure 1:
+
+Table:-->
+
+<table>
+  <tr>
+    <td>
+    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="myPicture" alt="some image">
+	</td>
+    <td> 
+	    <button class="play-button"> Button Play Sound</button>
+	</td>
+  </tr>
+  <tr>
+    <td>
+		<select id = "choiceList">  
+		<option> bird </option>  
+		<option> cat </option>  
+		<option> fireworks </option>  
+		<option> dog </option>  
+		</select>  
+	
+	</td>
+    <td> <button class="submit-button"> Button Submit</button></td>
+  </tr>
+</table> 
+
+<!--
+Javascript
+1.	Select image at random from set
+2.	Ensure image file name on list
+3.	Button Play: play sound file with matching image file name when clicked
+4.	Button Submit: validate selected dropdown list name matches sound file name
+
+
+Figure 2:
+-->
+
+
+
+
+<!-- &hellip; gives you ... -->
+<address> 
+
+<table cellpadding="10" align="center">
+<tr>
+ <td>
+ </td>
+ <td><h4>
+  <SCRIPT LANGUAGE="JavaScript">
+   <!-- This script and many more are available free online at -->
+   <!-- The JavaScript Source!! http://javascript.internet.com -->
+   document.write("Updated: " + document.lastModified)
+  </SCRIPT>
+  </h4>
+  <a href="#"> <button class="export-csv"> Export CSV</button> </a>
+ </td>
+ <td>
+ </td>
+</tr>
+</table>
+
+</address>
+
+<script src="./page4script.js"></script>
+
+ <!--<script src="/__/firebase/5.5.7/firebase-app.js"></script>
+ <script src="/__/firebase/5.5.7/firebase-auth.js"></script>
+ <script src="/__/firebase/5.5.7/firebase-database.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+    https://firebase.google.com/docs/web/setup#reserved-urls -->
+
+    <!-- Initialize Firebase -->
+<!-- <script src="/__/firebase/init.js"></script>
+-->	
+
+</body>
 </html>
+
