--- a/page5.html
+++ b/page5.html
@@ -23,8 +23,10 @@
 <!-- Main content 
 https://www.jotform.com/blog/how-to-add-captcha-to-google-forms/
 -->
+
 <div class="box">
 
+<!--
 Jonathan Holman, Jonathan Lazar, Jinjuan Heidi Feng, and John D'Arcy. 2007. Developing usable CAPTCHAs for blind users. In Proceedings of the 9th international ACM SIGACCESS conference on Computers and accessibility (Assets '07). Association for Computing Machinery, New York, NY, USA, 245–246. DOI:https://doi.org/10.1145/1296843.1296894
 
 
@@ -39,9 +41,10 @@ Graig Sauer and Harry Hochheiser and Jinjuan Feng and Jonathan Lazar, (2008) Tow
 <br><br>
 
 Graig Sauer, Jonathan Lazar, Harry Hochheiser, and Jinjuan Feng. 2010. Towards A Universally Usable Human Interaction Proof: Evaluation of Task Completion Strategies. ACM Trans. Access. Comput. 2, 4, Article 15 (June 2010), 32 pages. DOI:https://doi.org/10.1145/1786774.1786776
-
+-->
   
-</div>
+
+/div>
 
 <!--Images: GitHub\usabilitytesting\media\captcha-images\public-domain-www.publicdomainpictures.net\
 Sounds: GitHub\usabilitytesting\media\captcha-sounds\
