--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <li><a href="page6.html" target="_blank">Page6</a></li> 
   <li><a href="page7.html" target="_blank">Page7</a></li>
   <li><a href="page8.html" target="_blank">Page8</a></li> 
+  <li><a href="references.html" target="_blank">References</a></li> 
 </ul>
 
 
