--- a/page8.html
+++ b/page8.html
@@ -24,6 +24,7 @@
 https://www.jotform.com/blog/how-to-add-captcha-to-google-forms/
 -->
 <div class="box">
+Identify what the sound is to authenticate with system.
 
 <!--
 
@@ -60,7 +61,7 @@ Table:-->
     <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="myPicture">
 	</td>
     <td> 
-	   
+	   Please type the name for the sound in text box below.
 		<input type="text" id="image_guess_input" name="image_guess_input">
 	</td>
   </tr>
