--- a/page5.html
+++ b/page5.html
@@ -24,7 +24,7 @@ https://www.jotform.com/blog/how-to-add-captcha-to-google-forms/
 -->
 
 <div class="box">
-To authenticate yourself, identify what the sound is by listening to the sound, selecting the matching name, and submitting.
+To authenticate yourself, identify what the sound is by listening to the sound, selecting the matching name, and then submitting.
 
 
 
@@ -41,7 +41,7 @@ Table:-->
 <table>
   <tr>
     <td>
-    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="myPicture" >
+    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="myPicture" alt="">
 	</td>
     <td> 
 	    <button class="play-button"> Play Sound</button>
