--- a/page7.html
+++ b/page7.html
@@ -37,7 +37,7 @@ Table:-->
 <table>
   <tr>
     <td>
-    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="myPicture">
+    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="myPicture" alt="">
 	</td>
     <td> 
 	    <button class="play-button"> Play Sound</button>
