--- a/page8.html
+++ b/page8.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="./ut.css">
-  <meta name="title" content=""/>
-  <meta name="Keywords" content=""/>
-  <meta name="Description" content="This is the description of my website."/>
+
   
 </head>
 
@@ -41,7 +39,7 @@ Table:-->
 <table>
   <tr>
     <td>
-    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="myPicture">
+    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="myPicture" alt="">
 	</td>
     <td> 
 	   Please type the name for the sound in text box below.<br>
